# stb-kodi

./: CMakeLists.txt
addons/resource.language.en_gb/resources/: strings.po
addons/skin.estouchy/xml/: Home.xml
addons/skin.estuary/xml/: Home.xml
cmake/modules/: FindGstreamer.cmake  FindVuplus.cmake
system/: peripherals.xml  playercorefactory.xml
system/keymaps/: gen.xml
system/settings/: gbm.xml  settings.xml
tools/Linux/: kodi.sh.in
tools/depends/: configure.ac
xbmc/: Application.cpp  Application.h  ApplicationPlayer.cpp
xbmc/addons/: AddonManager.cpp
xbmc/cores/: CMakeLists.txt
xbmc/cores/DllLoader/exports/: CMakeLists.txt  emu_msvcrt.cpp  emu_msvcrt.h  wrapper.c
xbmc/cores/DllLoader/exports/util/: EmuFileWrapper.cpp  EmuFileWrapper.h
xbmc/cores/GstPlayer/: CMakeLists.txt  GstPlayer.cpp  GstPlayer.h  GstPlayerAudio.cpp  GstPlayerAudio.h  GstPlayerVideo.cpp  GstPlayerVideo.h
xbmc/cores/RetroPlayer/messages/: savestate.fbs
xbmc/cores/VideoPlayer/DVDInputStreams/: DVDInputStreamMemory.h
xbmc/cores/VideoPlayer/VideoRenderers/: CMakeLists.txt
xbmc/cores/VideoPlayer/VideoRenderers/VideoShaders/: CMakeLists.txt
xbmc/cores/gstplayer/: CMakeLists.txt  GSTPlayer.cpp  GSTPlayer.h
xbmc/cores/playercorefactory/: PlayerCoreConfig.h  PlayerCoreFactory.cpp
xbmc/dialogs/: GUIDialogBusy.cpp
xbmc/guilib/: JPEGImage.h  imagefactory.cpp
xbmc/input/: InputManager.cpp
xbmc/platform/: xbmc.cpp
xbmc/settings/: AdvancedSettings.cpp
xbmc/utils/: CMakeLists.txt  CPUInfo.cpp
xbmc/windowing/: CMakeLists.txt  WinEventsLinux.cpp
(+32 files in other folders)
